--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,13 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZC18JFMHQ"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F6PG9HHC65"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-PZC18JFMHQ');
+      gtag('config', 'G-F6PG9HHC65');
     </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
